hphp/test/zend/good/Zend/tests/magic_by_ref_006.php.expectf

Fatal error: Method test::__call() cannot take arguments by reference in %s/magic_by_ref_006.php on line 4
